--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
-		"bootstrap": "^5.1.3",
+		"bootstrap": "^5.1.1",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
-		"react-bootstrap": "^2.0.2",
+		"react-bootstrap": "^2.0.0-rc.1",
+		"react-datetime": "^3.1.1",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "5.3.0",
 		"react-scripts": "4.0.3",
